--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
 	"dependencies": {
 		"@heroicons/react": "2.1.1",
 		"@tailwindcss/forms": "0.5.7",
-		"@types/node": "20.11.16",
+		"@types/node": "20.11.19",
 		"@vercel/postgres": "0.7.2",
 		"autoprefixer": "10.4.17",
 		"bcrypt": "5.1.1",
 		"clsx": "2.1.0",
 		"next": "14.1.0",
-		"postcss": "8.4.33",
+		"next-auth": "5.0.0-beta.11",
+		"postcss": "8.4.35",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"tailwindcss": "3.4.1",
@@ -29,16 +30,16 @@
 	},
 	"devDependencies": {
 		"@types/bcrypt": "5.0.2",
-		"@types/react": "18.2.51",
-		"@types/react-dom": "18.2.18",
-		"@vercel/style-guide": "5.1.0",
-		"dotenv": "16.4.1",
+		"@types/react": "18.2.55",
+		"@types/react-dom": "18.2.19",
+		"@vercel/style-guide": "5.2.0",
+		"dotenv": "16.4.4",
 		"eslint": "8.56.0",
 		"eslint-config-next": "14.1.0",
 		"eslint-config-prettier": "9.1.0",
 		"eslint-config-standard": "17.1.0",
-		"eslint-plugin-tailwindcss": "3.14.1",
-		"prettier": "3.2.4",
+		"eslint-plugin-tailwindcss": "3.14.2",
+		"prettier": "3.2.5",
 		"prettier-plugin-tailwindcss": "0.5.11"
 	},
 	"engines": {
